fix: visibilty issue navbar moderator

--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,12 @@ nav ul a{
     text-decoration:none;
     color:white
 }
+nav ul li a{
+    color: white;
+}
+nav ul li a:visited{
+    color: white;
+}
 .dropbtn svg{
     width: 20px;
     height: 20px;
